feat: finished requirement 1 & 2

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "sd-0x-project-talker-manager",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "jest --runInBand",
     "test:mocha": "nyc --all --include src mocha src/tests/integration/*.js --exit",
     "restore": "cp __tests__/seed.json src/talker.json",
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js --ignore 'src/talker.json'",
+    "start": "node .",
+    "dev": "nodemon . --ignore 'src/talker.json'",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
   "keywords": [],
