--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sd-0x-project-talker-manager",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "jest --runInBand",
     "test:mocha": "nyc --all --include src mocha src/tests/integration/*.js --exit",
